[package]
name = "harrasment_app"
version = "0.1.0"
authors = ["Panayiotis Englezakis <panayiotis.englezakis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
futures = "0.3.8"
serde = "1.0.117"
serde_json = "1.0.59"
env_logger = "0.7"
